InetAddress.getLocalHost crash

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: core-libs
    • b04
    • x86
    • windows
    • Verified

        This happened in jdk9 nightly 02-22 and 02-21, when running UDP tests on Win 8 64 bit.
        There is no such issue with JDK 9 b02 promotion build.

        I can reproduce with following snippet of code:
               try (DatagramSocket ds = new DatagramSocket();){
                    
                    ds.getLocalAddress();
                } catch (SocketException e) {
                    // TODO Auto-generated catch block
                    e.printStackTrace();
                }

        When invoking getLocalAddress(), the vm is immediately crushed.

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x6d97c813, pid=856, tid=4616
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-ea-langtools-nightly-h114-20140221-b04-b00)
        # Java VM: Java HotSpot(TM) Client VM (25.0-b62 mixed mode windows-x86 )
        # Problematic frame:
        # V [jvm.dll+0xcc813]
        #
        # Failed to write core dump. Minidumps are not enabled by default on client versions of Windows
        #
        # An error report file with more information is saved as:
        # C:\Users\aurora\sandbox\hs_err_pid856.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #


        There is a similar issue JDK-8026245 on JDK 8.

              Assignee:
              Michael McMahon
              Reporter:
              Xiaofeng Yang
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: