8035653: InetAddress.getLocalHost crash

Reviewed-by: chegar